[tool.poetry]
name = "comma2k19"
version = "0.1.0"
description = "A fork of the Comma2k19 dataset using poetry"
authors = ["Lauren Gayle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cython = "^3.0.10"
scons = "^4.7.0"
six = "^1.16.0"
scikit-learn = "^0.24.0"
matplotlib = "^3.3.3"
pkgconfig = "^1.5.1"
pycapnp = "^1.0.0"
jupyter = "^1.0.0"
pycurl = "^7.43.0.6"
tenacity = "^6.3.1"
atomicwrites = "^1.4.0"
aenum = "^2.2.6"
lru-dict = "^1.1.6"
opencv-python = "^4.5.1.48"
seaborn = "^0.11.1"
tqdm = "^4.56.0"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.group.dev.dependencies]
openpilot = {git = "https://github.com/commaai/openpilot.git"} 



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
